# ccb

./: .gitignore  AppIcon.icns  CLAUDE.md  CMakeLists.txt  Info.plist.in  README.md  backendpool.cpp  backendpool.h  build.bat  build.sh  ccb.entitlements  claudesettingsdialog.cpp  claudesettingsdialog.h  claudesettingsmanager.cpp  claudesettingsmanager.h  configmanager.cpp  configmanager.h  conversationbrowser.cpp  conversationbrowser.h  licensedialog.cpp  licensedialog.h  licensemanager.cpp  licensemanager.h  logger.cpp  logger.h  macosstylemanager.cpp  macosstylemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  proxyserver.cpp  proxyserver.h  requesthandler.cpp  requesthandler.h  resources.qrc  win.license.txt
.github/workflows/: build.yml
conversion/: constants.h  request_converter.cpp  request_converter.h  response_converter.cpp  response_converter.h  streaming_converter.cpp  streaming_converter.h  types.h
tools/: generate_license.py  license_service.py
